@@ -28,6 +28,7 @@ documents those changes that are of interest to users and administrators.
     with hwloc.
  -- Cray - Fix issue restoring jobs when blade count increases due to hardware
     reconfiguration.
+ -- burst_buffer/cray - Hold job after 3 failed pre-run operations.
 
 * Changes in Slurm 16.05.4
 ==========================
